--- a/MyBetaVAE.ipynb
+++ b/MyBetaVAE.ipynb
@@ -5232,6 +5232,7 @@
         "id": "ZbjVnNFTNSEM"
       },
       "source": [
+        "# Architecture follows the design in https://github.com/AntixK/PyTorch-VAE\n",
         "class MyBetaVAE(nn.Module):\n",
         "    def __init__(self, in_channels, z_dim, beta): # image should have size 64*64\n",
         "        super(MyBetaVAE, self).__init__()\n",
@@ -5431,11 +5432,8 @@
       },
       "source": [
         "transforms = torchvision.transforms.Compose([\n",
-        "    # torchvision.transforms.RandomHorizontalFlip(),\n",
-        "    # torchvision.transforms.CenterCrop(148),\n",
         "    torchvision.transforms.Resize((64, 64)),\n",
-        "    torchvision.transforms.ToTensor(),\n",
-        "    # torchvision.transforms.Lambda(lambda X: 2 * X - 1.)\n",
+        "    torchvision.transforms.ToTensor()\n",
         "])\n",
         "\n",
         "def get_dataloaders(path):\n",
